--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="search__top">
-			<input class="search__input" type="text">
-			<ul class="search__list">
+	<section class="search">
+		<div class="container">
+			<div class="search__found">
+				<input class="search__input" type="text">
+				<ul class="search__list">
 
-			</ul>
+				</ul>
+			</div>
+
+			<div class="search__favorite">
+				<ul class="search__choised">
+
+				</ul>
+			</div>
 		</div>
-
-		<div class="search__bottom">
-			<ul class="search__choised">
-
-			</ul>
-		</div>
-	</div>
+	</section>
 	<script src="main.js"></script>
 </body>
 
